--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "^11.18.2",
+    "i18next": "^25.0.2",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
@@ -53,6 +54,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-i18next": "^15.5.1",
     "react-intersection-observer": "^9.5.3",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.26.2",
